--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ts-node": "^10.7.0"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.3",
     "pug": "^3.0.2",
     "socket.io": "^4.4.1",
